@@ -430,3 +430,4 @@ Revision	Version Updated		Log Message
 495		C++			Dominions instead of colonies
 496		C++			Colonies in HoD
 497		C++			No need to start before 1836
+498		C++			In HOD, limit naval bases to one per state
